--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "BatemaDevelopment .devcontainer",
-  "image": "mcr.microsoft.com/devcontainers/base:alpine",
+  "image": "mcr.microsoft.com/devcontainers/base:alpine-3.16",
   "features": {
     "ghcr.io/devcontainers/features/node:1": {
       "version": "lts"
