--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/base:alpine
+FROM alpine:3.16
 
 # [Optional] Uncomment this section to install additional OS packages.
 RUN apk update \
