--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,4 +2,4 @@ FROM alpine:3.16
 
 RUN apk update \
     && apk upgrade \
-    && apk add --no-cache sudo bash openjdk-17-jdk
+    && apk add --no-cache sudo bash openjdk17
