--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
-FROM mcr.microsoft.com/devcontainers/base:alpine-${imageVariant}
+FROM alpine:3.17
 
 RUN apk update \
     && apk upgrade \
-    && apk add --no-cache sudo bash openjdk17
+    && apk add --no-cache sudo bash git openjdk17
