--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,4 +2,4 @@ FROM alpine:3.17
 
 RUN apk update \
     && apk upgrade \
-    && apk add --no-cache sudo bash git openjdk17
+    && apk add --no-cache sudo bash git openjdk17 nodejs
