--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,5 @@
-FROM mcr.microsoft.com/devcontainers/base:alpine-3.16
+FROM alpine:3.17
 
-# [Optional] Uncomment this section to install additional OS packages.
 RUN apk update \
-    && export DEBIAN_FRONTEND=noninteractive \
-    && apk add --no-cache git sudo nano bash openjdk-17-jdk
+    && apk upgrade \
+    && apk add --no-cache sudo bash git openjdk17 nodejs
